Fixed up some layout issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,25 +1,20 @@
 body, html {
-    height: 100%;
     margin: 0;
     font-family: 'Lora', serif;
     line-height: 2;
 }
 
-.container-fluid {
-    height: 100%;
-    min-height: 100%;
-    /* padding: 0; */
-}
-
-.custom-container {
-    width: 100%;
-    padding: 0;
-    margin: 0 auto;
-    box-sizing: border-box; /* Add this line to prevent horizontal scrolling */
+.homepage {
+    display: flex;
+    height: 100vh;
 }
 
 h1 {
     font-size: 2.5em;
+}
+
+.hero-text {
+    color: #136858;
 }
 
 h4 {
@@ -46,22 +41,6 @@ a {
 
 a:hover {
     color: #9B9A97;
-}
-
-.hero-text {
-    color: #136858;
-}
-
-.wrapper {
-    display: grid;
-    grid-template-rows: 1fr auto;
-    min-height: 100%;
-    height: 100%;
-}
-
-.homepage {
-    display: flex;
-    height: 100%;
 }
 
 .image-section {
@@ -104,6 +83,7 @@ a:hover {
     grid-template-columns: repeat(auto-fill, minmax(46%, 1fr)); /* Add this line */
     gap: 1.5rem;
     padding-bottom: 2rem;
+    box-sizing: border-box; /* Add this line to prevent horizontal scrolling */
 }
 
 .portfolio-item {
